# ai-rag-rust

./: .env.example  Cargo.toml  README.md
data/embeddings/: embedding.json
data/input/: faq.txt
src/: constants.rs  env_load.rs  lib.rs  pinecone_client.rs  query_db.rs  types.rs
